[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z-image-gen"
version = "1.0.0"
description = "Local AI image generation with Z-Image model - optimized for 4GB VRAM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FedoRScorpioN"}
]
keywords = ["ai", "image-generation", "stable-diffusion", "z-image", "low-vram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "stable-diffusion-cpp-python>=0.4.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "platformdirs>=4.0.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
z-image-gen = "z_image_gen.cli.app:main"
zimage = "z_image_gen.cli.app:main"

[project.urls]
Homepage = "https://github.com/FedoRScorpioN/z-image-gen"
Repository = "https://github.com/FedoRScorpioN/z-image-gen"
Issues = "https://github.com/FedoRScorpioN/z-image-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
z_image_gen = ["py.typed"]
